version,fix,refactor: Update to Java 17
Update the libraries and methods used to be compatible with Java 17 and Keycloak 23.x